Fix articles list layout on mobile. Remove hardcoded min-width that breaks mobile layout

--- a/src/app/pages/articles-list/view/components/articles-list/articles-list.scss
+++ b/src/app/pages/articles-list/view/components/articles-list/articles-list.scss
@@ -2,6 +2,7 @@
   display: grid;
   gap: 2rem;
   grid-template-columns: 1fr;
+  width: fit-content;
   @media (min-width: 768px) {
     grid-template-columns: 1fr 1fr;
   }
