--- a/src/app/pages/articles-list/view/page/articles-list-page.scss
+++ b/src/app/pages/articles-list/view/page/articles-list-page.scss
@@ -3,16 +3,13 @@
 }
 
 .content {
-  padding: 2rem;
-  width: fit-content;
-  margin: 0 auto 0 auto;
-  min-width: 24rem;
+  padding: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
 
   @media (min-width: 768px) {
-    min-width: 50rem;
-  }
-  @media (min-width: 1024px) {
-    min-width: 76rem;
+    padding: 2rem;
   }
 }
 
@@ -28,7 +25,7 @@
 }
 
 .articles-list {
-  margin: 2.5rem 0 1.5rem 0;
+  margin: 2.5rem auto 1.5rem auto;
 }
 
 .spinner-container {
